# siberia-price

./: .env.example  .gitignore  CODEX_PROMPT.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: cleaning_rules.yaml  location_types.yaml  regions.yaml  vri_classifier.yaml
data/examples/: industrial_land_sample.csv  kyzyl_pilot_cadastral_numbers.csv
data/examples/nspd/: incomplete_feature.json  industrial_feature.json  warehouse_feature.json
docs/: data_dictionary.md  data_sources.md  github_components.md  kyzyl_pilot.md  methodology.md  project_state.md  project_state_siberia_price.md  research_log.md  root_project.md
src/siberia_price/analytics/: __init__.py  metrics.py  outliers.py  tax_model.py
src/siberia_price/geo/: __init__.py  distances.py
src/siberia_price/io/: __init__.py  raw_store.py
src/siberia_price/normalization/: __init__.py  vri.py
src/siberia_price/nspd/: __init__.py  client.py  parser.py
src/siberia_price/pipeline/: __init__.py  process_land_table.py  process_nspd_raw_folder.py
tests/: test_metrics.py  test_nspd_parser.py  test_process_land_table.py  test_process_nspd_raw_folder.py  test_vri.py
